SI edge structure precision

--- a/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
@@ -3486,6 +3486,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we explore the ice_edge variable, we find out it is represented with 3 values :   \n",
+    "* 1 -> no ice or very open ice\n",
+    "* 2 -> open ice cover (4 to 7 tens)\n",
+    "* 3 -> close, very close and fast ice"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
