--- a/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
@@ -2350,6 +2350,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ice_type can be of 4 values :   \n",
+    "* 1 -> no ice or very open ice\n",
+    "* 2 -> relatively young ice\n",
+    "* 3 -> ice that survived a summer melt\n",
+    "* 4 -> ambiguous ice type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -3489,7 +3500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we explore the ice_edge variable, we find out it is represented with 3 values :   \n",
+    "The ice_edge variable is represented with 3 values :   \n",
     "* 1 -> no ice or very open ice\n",
     "* 2 -> open ice cover (4 to 7 tens)\n",
     "* 3 -> close, very close and fast ice"
