value description changes

--- a/1_OSI_SAF_sea_ice_introductory/1_3b_OSI_SAF_sea_ice_mapping_Ice_Edge.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3b_OSI_SAF_sea_ice_mapping_Ice_Edge.ipynb
@@ -311,14 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's explore the netcdf file to find out about its characteristics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We seen in the <a href=\"./1_2_OSI_SAF_sea_ice_file_structure.ipynb\" target=\"_blank\">file structure</a> notebook:\n",
+    "We seen in the <a href=\"./1_2_OSI_SAF_sea_ice_file_structure.ipynb\" target=\"_blank\">file structure</a> notebook that our Sea Ice Edge can be of one of the three value below:\n",
     "* 1 -> no ice or very open ice\n",
     "* 2 -> open ice cover (4 to 7 tens)\n",
     "* 3 -> close, very close and fast ice\n",
