drift section reviewed to embed relevant edge to it

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -2009,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,35 +2039,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the download path"
+    "Let's set our parameters for dowloading the Sea Ice Drift files. As it is a measure of movement, each file name indicates two dates. The measures are made on two days, and our reference day will be the second one.<br>\n",
+    "To plot our Sea Ice Drift, we will need to have the Sea Ice Edge file for this reference day. We here specify the file pattern for both files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ice_drift_nh_polstere-625_multi-oi_20251104\n"
+      "04 / 11 / 2025\n",
+      "06 / 11 / 2025\n",
+      "ice_drift_nh_polstere-625_multi-oi_20251104\n",
+      "ice_edge_nh_polstere-100_multi_20251106\n"
      ]
     }
    ],
    "source": [
-    "year = \"2025\"\n",
-    "month = '11'\n",
-    "day = '04'\n",
-    "path = '/archive/ice/drift_lr/merged/' + year + '/' + month\n",
-    "file_pattern = 'ice_drift_'+hemisphere+'_polstere-625_multi-oi_' + year + month + day\n",
+    "from datetime import date, timedelta\n",
     "\n",
-    "print(file_pattern)"
+    "ref_date = date(2025,11,6) #this is the referential date\n",
+    "\n",
+    "drift_date1 = ref_date - timedelta(2)\n",
+    "\n",
+    "ref_year =  str(ref_date.year)\n",
+    "ref_month =  \"{:02d}\".format(ref_date.month)\n",
+    "ref_day =  \"{:02d}\".format(ref_date.day)\n",
+    "\n",
+    "drift_year1 = str(drift_date1.year)\n",
+    "drift_month1 =  \"{:02d}\".format(drift_date1.month)\n",
+    "drift_day1 =  \"{:02d}\".format(drift_date1.day)\n",
+    "\n",
+    "print(drift_day1,'/',drift_month1,'/',drift_year1)\n",
+    "print(ref_day,'/',ref_month,'/',ref_year)\n",
+    "\n",
+    "drift_path = '/archive/ice/drift_lr/merged/' + ref_year + '/' + ref_month\n",
+    "edge_path = '/archive/ice/edge/' + ref_year + '/' + ref_month\n",
+    "drift_file_pattern = 'ice_drift_'+hemisphere+'_polstere-625_multi-oi_' + drift_year1 + drift_month1 + drift_day1\n",
+    "edge_file_pattern = 'ice_edge_'+ hemisphere +'_polstere-100_multi_' + ref_year + ref_month + ref_day\n",
+    "\n",
+    "print(drift_file_pattern)\n",
+    "print(edge_file_pattern)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start by downloading the drift file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2104,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,12 +2113,52 @@
     "# connect ftp and download file\n",
     "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
     "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
+    "ftp.cwd(drift_path)\n",
     "files = ftp.nlst()\n",
     "for file in files:\n",
-    "    if file_pattern in file:\n",
+    "    if drift_file_pattern in file:\n",
     "        filename = file\n",
     "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift', hemisphere, filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now download the corresponding Sea Ice Edge file, in a dedicated folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create the folder for the Sea Ice Edge file\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift\", hemisphere, \"SI_Edge\")\n",
+    "os.makedirs(download_dir, exist_ok=True)\n",
+    "\n",
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(edge_path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if edge_file_pattern in file:\n",
+    "        filename = file\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift', hemisphere, 'SI_Edge', filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -2103,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2112,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2124,35 +2192,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the download path"
+    "Similarly as for the northern hemisphere, we have set our parameters for dowloading the Sea Ice Drift files along the corresponding Sea Ice Edge file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ice_drift_sh_polstere-625_multi-oi_20251104\n"
+      "reference date:  04 / 11 / 2025\n",
+      "first day of drift:  06 / 11 / 2025\n",
+      "ice_drift_sh_polstere-625_multi-oi_20251104\n",
+      "ice_edge_sh_polstere-100_multi_20251106\n"
      ]
     }
    ],
    "source": [
-    "year = \"2025\"\n",
-    "month = '11'\n",
-    "day = '04'\n",
-    "path = '/archive/ice/drift_lr/merged/' + year + '/' + month\n",
-    "file_pattern = 'ice_drift_'+hemisphere+'_polstere-625_multi-oi_' + year + month + day\n",
+    "from datetime import date, timedelta\n",
     "\n",
-    "print(file_pattern)"
+    "ref_date = date(2025,11,6) #this is the referential date\n",
+    "\n",
+    "drift_date1 = ref_date - timedelta(2)\n",
+    "\n",
+    "ref_year =  str(ref_date.year)\n",
+    "ref_month =  \"{:02d}\".format(ref_date.month)\n",
+    "ref_day =  \"{:02d}\".format(ref_date.day)\n",
+    "\n",
+    "drift_year1 = str(drift_date1.year)\n",
+    "drift_month1 =  \"{:02d}\".format(drift_date1.month)\n",
+    "drift_day1 =  \"{:02d}\".format(drift_date1.day)\n",
+    "\n",
+    "print(\"reference date: \",drift_day1,'/',drift_month1,'/',drift_year1)\n",
+    "print(\"first day of drift: \",ref_day,'/',ref_month,'/',ref_year)\n",
+    "\n",
+    "drift_path = '/archive/ice/drift_lr/merged/' + ref_year + '/' + ref_month\n",
+    "edge_path = '/archive/ice/edge/' + ref_year + '/' + ref_month\n",
+    "drift_file_pattern = 'ice_drift_'+hemisphere+'_polstere-625_multi-oi_' + drift_year1 + drift_month1 + drift_day1\n",
+    "edge_file_pattern = 'ice_edge_'+ hemisphere +'_polstere-100_multi_' + ref_year + ref_month + ref_day\n",
+    "\n",
+    "print(drift_file_pattern)\n",
+    "print(edge_file_pattern)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start by downloading the drift file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2256,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,12 +2265,52 @@
     "# connect ftp and download file\n",
     "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
     "ftp.login(username, password)\n",
-    "ftp.cwd(path)\n",
+    "ftp.cwd(drift_path)\n",
     "files = ftp.nlst()\n",
     "for file in files:\n",
-    "    if file_pattern in file:\n",
+    "    if drift_file_pattern in file:\n",
     "        filename = file\n",
     "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift', hemisphere, filename), 'wb').write)\n",
+    "ftp.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now download the corresponding Sea Ice Edge file, in a dedicated folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'221 Goodbye.'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create the folder for the Sea Ice Edge file\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift\", hemisphere, \"SI_Edge\")\n",
+    "os.makedirs(download_dir, exist_ok=True)\n",
+    "\n",
+    "# connect ftp and download file\n",
+    "ftp = ftplib.FTP(\"osisaf.met.no\") \n",
+    "ftp.login(username, password)\n",
+    "ftp.cwd(edge_path)\n",
+    "files = ftp.nlst()\n",
+    "for file in files:\n",
+    "    if edge_file_pattern in file:\n",
+    "        filename = file\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift', hemisphere, 'SI_Edge', filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
