--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -1285,7 +1285,7 @@
     "* The **Sea-Ice Extend** defined as the *the total grid-area where the Sea-Ice concentration exceed 15%*\n",
     "\n",
     "<img src='https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-osi-saf-sea-ice/-/raw/main/img/Burgard_2020_SIA_vs_SIE.png'><br>\n",
-    "<figcaption>Difference between sea-ice area and sea-ice extent (inspired from <a href=\"https://www.ghrsst.org/wp-content/uploads/2021/04/SSTDefinitionsDiscussion.pdf\" target=\"_blank\">Burgard (2020)</a>)</figcaption>\n",
+    "<figcaption>Difference between sea-ice area and sea-ice extent (inspired from <a href=\"https://blogs.egu.eu/divisions/cr/2020/04/10/did-you-know-the-difference-between-sea-ice-area-and-sea-ice-extent/\" target=\"_blank\">Burgard (2020)</a>)</figcaption>\n",
     "<br>\n",
     "These calculations are provide as daily average, and as monthly average. For each pole, the Sea-Ice Index provides then four files:\n",
     "\n",
