adding date explanation

--- a/1_OSI_SAF_sea_ice_introductory/1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb
@@ -160,8 +160,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Sea Ice Index values have the same latency as the Sea-Ice Concentration ICDR it is based on (AMSR-2):\n",
+    "* the so-called **Fast-track files** are produced with a latency of one day. \n",
+    "* the **nominal files** are produced with latency of 16 day. The nominal files erase the Fast-track ones once produced.\n",
+    "\n",
+    "The nominal values are more reliable than the Fast-track ones. However, one wants to have an overview of the trends earlier than two weeks after. For this reason we do provide these lasts. <br>\n",
+    "Let's define the dates for the last file we should be working with. As we will use these later down, make sure you have downloaded the last version from our FTP server (on the same day you're following this notebook). If needed, follow the steps on the <a href=\"./1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb\">dedicated notebook</a>."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
