adding explanation to min / max

--- a/1_OSI_SAF_sea_ice_introductory/1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb
@@ -703,23 +703,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "September Trend : \n",
-      "-76.7 thousand km2/year\n",
-      "-9.6 %/decade\n"
+      "September Trend (month with the minimum monthly average in northern hemisphere): \n",
+      "-3.2 thousand km2/year\n",
+      "-1.0 %/decade\n"
      ]
     }
    ],
    "source": [
     "min_pred = min_pred.reshape(1,-1)\n",
     "dif_min = (min_pred[0][1]-min_pred[0][0])*10**3/1\n",
-    "print(f\"September Trend : \\n{dif_min:.1f} thousand km2/year\") \n",
+    "print(f\"September Trend (month with the minimum monthly average in northern hemisphere): \\n{dif_min:.1f} thousand km2/year\") \n",
     "\n",
     "ref = min_pred[0][0]*10**6\n",
     "min_d = min_pred[0][10]*10**6\n",
@@ -729,23 +729,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "March Trend :  \n",
-      "-41.1 thousand km2/year\n",
-      "-2.5 %/decade\n"
+      "March Trend (month with the maximum monthly average in northern hemisphere):  \n",
+      "-4.4 thousand km2/year\n",
+      "-0.2 %/decade\n"
      ]
     }
    ],
    "source": [
     "max_pred = max_pred.reshape(1,-1)\n",
     "dif_max = (max_pred[0][1]-max_pred[0][0])*10**3/1\n",
-    "print(f\"March Trend :  \\n{dif_max:.1f} thousand km2/year\") \n",
+    "print(f\"March Trend (month with the maximum monthly average in northern hemisphere):  \\n{dif_max:.1f} thousand km2/year\") \n",
     "\n",
     "ref = max_pred[0][0]*10**6\n",
     "max_d = max_pred[0][10]*10**6\n",
@@ -1216,14 +1216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "February Trend : \n",
+      "February Trend (month with the minimum monthly average in the southern hemisphere): \n",
       "-3.2 thousand km2/year\n",
       "-1.0 %/decade\n"
      ]
@@ -1232,7 +1232,7 @@
    "source": [
     "min_pred = min_pred.reshape(1,-1)\n",
     "dif_min = (min_pred[0][1]-min_pred[0][0])*10**3/1\n",
-    "print(f\"February Trend : \\n{dif_min:.1f} thousand km2/year\") \n",
+    "print(f\"February Trend (month with the minimum monthly average in the southern hemisphere): \\n{dif_min:.1f} thousand km2/year\") \n",
     "\n",
     "ref = min_pred[0][0]*10**6\n",
     "min_d = min_pred[0][10]*10**6\n",
@@ -1242,14 +1242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "September Trend :  \n",
+      "September Trend (month with the maximum monthly average in the southern hemisphere):  \n",
       "-4.4 thousand km2/year\n",
       "-0.2 %/decade\n"
      ]
@@ -1258,7 +1258,7 @@
    "source": [
     "max_pred = max_pred.reshape(1,-1)\n",
     "dif_max = (max_pred[0][1]-max_pred[0][0])*10**3/1\n",
-    "print(f\"September Trend :  \\n{dif_max:.1f} thousand km2/year\") \n",
+    "print(f\"September Trend (month with the maximum monthly average in the southern hemisphere):  \\n{dif_max:.1f} thousand km2/year\") \n",
     "\n",
     "ref = max_pred[0][0]*10**6\n",
     "max_d = max_pred[0][10]*10**6\n",
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
