--- a/1_OSI_SAF_sea_ice_introductory/1_3e_OSI_SAF_sea_ice_mapping_Ice_Emissivity.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_3e_OSI_SAF_sea_ice_mapping_Ice_Emissivity.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<a href=\"../Index.ipynb\" target=\"_blank\"><< Index</a>\n",
     "<br>\n",
-    "<a href=\"./1_3d_OSI_SAF_sea_ice_mapping_Ice_Drift.ipynb\" target=\"_blank\"><< Mapping OSI SAF sea ice type</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=\".1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb\" target=\"_blank\">Plotting OSI SAF sea ice index >></a>"
+    "<a href=\"./1_3d_OSI_SAF_sea_ice_mapping_Ice_Drift.ipynb\" target=\"_blank\"><< Mapping OSI SAF sea ice drift</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=\"./1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb\" target=\"_blank\">Plotting OSI SAF sea ice index >></a>"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**EUMETSAT OSI SAF Training Service**</font> <br>\n",
-    "**Copyright:** 2024 EUMETSAT <br>\n",
+    "**Copyright:** 2026 EUMETSAT <br>\n",
     "**License:** MIT"
    ]
   },
@@ -31,7 +31,7 @@
    "source": [
     "<html>\n",
     "  <div style=\"width:100%\">\n",
-    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fsensors%2Flearn-osi-saf-sea-ice/HEAD?labpath=1_OSI_SAF_sea_ice_introductory%2F1_3d_OSI_SAF_sea_ice_mapping_ice_drift.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
+    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fsensors%2Flearn-osi-saf-sea-ice/HEAD?labpath=1_OSI_SAF_sea_ice_introductory%2F1_3e_OSI_SAF_sea_ice_mapping_Ice_Emissivity.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
     "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
     "  </div>\n",
     "</html>"
@@ -840,10 +840,15 @@
     "<hr>\n",
     "<a href=\"../Index.ipynb\" target=\"_blank\"><< Index</a>\n",
     "<br>\n",
-    "<a href=\"./1_3d_OSI_SAF_sea_ice_mapping_Ice_Drift.ipynb\" target=\"_blank\"><< Mapping OSI SAF sea ice type</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=\".1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb\" target=\"_blank\">Plotting OSI SAF sea ice index >></a>\n",
+    "<a href=\"./1_3d_OSI_SAF_sea_ice_mapping_Ice_Drift.ipynb\" target=\"_blank\"><< Mapping OSI SAF sea ice drift</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=\"./1_3f_OSI_SAF_sea_ice_plotting_Ice_Index.ipynb\" target=\"_blank\">Plotting OSI SAF sea ice index >></a>\n",
     "<hr>\n",
     "<a href=\"https://gitlab.eumetsat.int/eumetlab/ocean\">View on GitLab</a> | <a href=\"https://training.eumetsat.int/\">EUMETSAT Training</a> | <a href=mailto:ops@eumetsat.int>Contact helpdesk for support </a> | <a href=mailto:training@eumetsat.int>Contact our training team to collaborate on and reuse this material</a></span></p>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
